massive revamp, swapped for hf embed and hf-vectordb

--- a/work/bioc-langchain.ipynb
+++ b/work/bioc-langchain.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "from langchain_community.llms import Ollama\n",
     "#from langchain_experimental.llms.ollama_functions import OllamaFunctions\n",
-    "from langchain_community.embeddings import OllamaEmbeddings"
+    "from langchain_community.embeddings import OllamaEmbeddings\n",
+    "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
+    "\n"
    ]
   },
   {
@@ -33,14 +35,190 @@
    "execution_count": 3,
    "id": "47d1e929-1b05-42de-abcc-d18bc6e7545e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8043dcf4bf74f26a33a104244a1f671",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0bed1877834b432d9e349b7cfc1573e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92949e51c8f1486cb52fd32dd9e3f1d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/10.7k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d90825cddbf44cd966d5774da47b452",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "986f75b54b154bfd95ac3e992060558d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1677ca0858e4f5fa4d34054917a2b4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5418587e73034b5491a10d44a281b879",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a133ed481394818a3724298a21f8b33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a7f0e7f70084d788d110a3bcd9b226a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74479a8be00446a6b483f3cdf62bbafe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1795d5bbfaa0480c80c292a94e9df800",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "1_Pooling/config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#create the LLM \n",
     "ccb_endpoint = 'http://compute-gc-17-255.o2.rc.hms.harvard.edu:11434'\n",
     "\n",
     "llm = Ollama(base_url= ccb_endpoint, model=\"llama2\", temperature=0)\n",
     "#create the embedding model\n",
-    "oembed = OllamaEmbeddings(base_url=ccb_endpoint, model=\"nomic-embed-text\")"
+    "#oembed = OllamaEmbeddings(base_url=ccb_endpoint, model=\"nomic-embed-text\")\n",
+    "oembed = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "37f2598f-26cb-4dad-a5eb-96879dd5ec8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ah, a classic question! The answer is: it's time to get a new fence! 😂\n"
+     ]
+    }
+   ],
+   "source": [
+    "chat_model_response = llm.invoke(\"What time is it when an elephant sits on your fence?\")\n",
+    "print(chat_model_response)"
    ]
   },
   {
@@ -113,48 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "da3623c1-1076-4881-b8ca-36ae58db8fce",
    "metadata": {},
    "outputs": [],
    "source": [
     "#load from persist \n",
-    "T500bioc_db = Chroma(persist_directory=\"/n/data1/hms/ccb/projects/bioc-chatbot/data/chromadb_vignettesT500_csize500_overlap10\", embedding_function=oembed)"
+    "T500bioc_db = Chroma(persist_directory=\"/tmp/T500-vignettes-vectordb-ST/\", embedding_function=oembed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "8a7339b8-069f-4d1c-a6e0-69c46af376e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22 SummarizedExperiment-class\n",
-      "SummarizedExperiment-class\n",
-      "SummarizedExperiment objects\n",
-      "Description\n",
-      "The SummarizedExperiment class is a matrix-like container where rows represent features of in-\n",
-      "terest (e.g. genes, transcripts, exons, etc...) and columns represent samples (with sample data\n",
-      "summarized as a DataFrame). A SummarizedExperiment object contains one or more assays, each\n",
-      "represented by a matrix-like object of numeric or other mode.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#test retrival\n",
-    "\n",
-    "retriever = T500bioc_db.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 6})\n",
-    "\n",
-    "retrieved_docs = retriever.invoke(\"How many classes are there in a SummarizedExperiment object?\")\n",
-    "print(retrieved_docs[0].page_content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "05520439-c28e-4750-8fa2-97e46e2695bb",
    "metadata": {},
    "outputs": [],
@@ -187,7 +335,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
+   "id": "eae4e526-e79e-4bc5-86f8-e5a9f0019f8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The `SummarizedExperiment` package provides a number of classes that can be used to summarize and visualize experimental data. Here are the classes provided by the package:\n",
+      "\n",
+      "1. `SummarizedExperiment`: This is the base class for all experiments in the package. It provides methods for summarizing and visualizing experimental data.\n",
+      "2. `Summary`: This class represents a summary of an experiment. It provides methods for calculating summary statistics, such as means and standard deviations, and for creating plots to visualize the data.\n",
+      "3. `Plot`: This class represents a plot created using the `Summary` class. It provides methods for customizing the appearance of the plot and for adding annotations.\n",
+      "4. `DataPoint`: This class represents a single data point in an experiment. It provides methods for calculating the position of the data point in the experiment and for accessing the corresponding summary statistics.\n",
+      "5. `Experiment`: This class represents an entire experiment, including all of the data points and summary statistics. It provides methods for calculating summary statistics for the entire experiment and for creating plots to visualize the data.\n",
+      "6. `GroupedDataPoint`: This class represents a group of data points in an experiment that are related by some common attribute, such as time or treatment condition. It provides methods for calculating summary statistics for the group and for creating plots to visualize the data.\n",
+      "7. `Histogram`: This class represents a histogram created using the `Summary` class. It provides methods for customizing the appearance of the histogram and for adding annotations.\n",
+      "8. `BoxPlot`: This class represents a box plot created using the `Summary` class. It provides methods for customizing the appearance of the box plot and for adding annotations.\n",
+      "9. `Heatmap`: This class represents a heat map created using the `Summary` class. It provides methods for customizing the appearance of the heat map and for adding annotations.\n",
+      "10. `PieChart`: This class represents a pie chart created using the `Summary` class. It provides methods for customizing the appearance of the pie chart and for adding annotations.\n",
+      "\n",
+      "These are the main classes provided by the `SummarizedExperiment` package. There may be other classes available depending on the specific version of the package you are using.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test without rag\n",
+    "chat_model_response = llm.invoke(\"How many classes are there in the SummarizedExperiment package?\")\n",
+    "print(chat_model_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "0204936f-f4e0-4b99-b196-ac98e73611bc",
    "metadata": {},
    "outputs": [
@@ -195,21 +377,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The SummarizedExperiment class in Bioconductor is a matrix-like container that stores features of interest (e.g. genes, transcripts, exons, etc.) and samples. It is similar to the historical ExpressionSet, but allows for more flexible row information, allowing both GRanges based as well as those described by arbitrary DataFrame s. This makes it ideal for a variety of experiments, particularly sequencing-based experiments such as RNA-Seq and ChIp-Seq.\n",
+      "According to the documentation provided, the SummarizedExperiment package contains two classes: `SummarizedExperiment` and `RangedSummarizedExperiment`. The `SummarizedExperiment` class is a matrix-like container that represents features of interest (such as genes, transcripts, exons, etc.) and samples. It can contain one or more assays, each represented by a matrix-like object of numeric or other mode.\n",
       "\n",
-      "The SummarizedExperiment package contains two classes: SummarizedExperiment and RangedSummarizedExperiment. The SummarizedExperiment class is the main class used to store data, while the RangedSummarizedExperiment class provides a way to construct SummarizedExperiments with multiple assays.\n",
+      "The `RangedSummarizedExperiment` class is an extension of the `SummarizedExperiment` class that allows for the representation of ranges of values for the features of interest.\n",
       "\n",
-      "The constructor for SummarizedExperiment instances is documented in the ?RangedSummarizedExperiment function. The objects contain one or more assays, each represented by a matrix-like object of numeric or other mode. The rows of a SummarizedExperiment object represent features of interest, and information about these features can be found in the package's documentation.\n",
-      "\n",
-      "References:\n",
-      "\n",
-      "* Bioconductor. (n.d.). SummarizedExperiment. Retrieved from <https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html>\n",
-      "* Bioconductor. (n.d.). tidySummarizedExperiment. Retrieved from <https://bioconductor.org/packages/release/bioc/html/tidySummarizedExperiment.html>"
+      "Therefore, there are two classes in the SummarizedExperiment package: `SummarizedExperiment` and `RangedSummarizedExperiment`."
      ]
     }
    ],
    "source": [
-    "for chunk in rag_chain.stream(\"What is SummarizedExperiment?\"):\n",
+    "# Run with Retrival augment\n",
+    "for chunk in rag_chain.stream(\"How many classes are there in the SummarizedExperiment package?\"):\n",
     "    print(chunk, end=\"\", flush=True)"
    ]
   },
@@ -642,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
