modified notebooks; added markdown and put in blanks for hands-on portion of talk

--- a/work/bioc-llamaindex.ipynb
+++ b/work/bioc-llamaindex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,168 +18,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ac94f3e16284ca4b2038f84fb4a160d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "889987e7ff204d96b6ec1a645680cd13",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f5069d89ca944bf8f9830a1b87f2a1c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/10.7k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f37fc7282a747d19ca09cffb3e7e426",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b72a7fd7c65f491a8071c5a99bcc5514",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dee03789652b410a8a0489b58999c06c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f64bc00507ae464983f319f54cb26f6a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b721ecb329f642f8a0e40ad77c1d50f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b323ef1740c4edab8ae2d19ddb32740",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fa0708d7c164ca3a4d3cb866e95136f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fd62bff575f448da4f82fca2f310b45",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "1_Pooling/config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "ccb_endpoint = 'http://compute-gc-17-255.o2.rc.hms.harvard.edu:11434'\n",
-    "\n",
+    "# log in to VPN or harvard wifi for endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccb_endpoint = 'http://compute-gc-17-255.o2.rc.hms.harvard.edu:11434'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# hf embedding model\n",
     "oembed_model =  HuggingFaceEmbedding(model_name=\"all-MiniLM-L6-v2\")\n",
     "\n",
@@ -189,37 +48,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "SummarizedExperiment is a tool that helps researchers and scientists to summarize and analyze large datasets generated from experiments. It is designed to automate the process of data summarization, allowing users to focus on interpreting and gaining insights from their data rather than spending time on manual data processing.\n",
-      "\n",
-      "SummarizedExperiment provides a range of features to help users simplify and organize their data, including:\n",
-      "\n",
-      "1. Data cleaning and preprocessing: SummarizedExperiment can automatically clean and preprocess data, removing errors and inconsistencies, and transforming the data into a format suitable for analysis.\n",
-      "2. Feature selection and engineering: Users can select and create new features from their existing data, such as polynomial transformations, log transformations, and feature extraction methods like PCA and t-SNE.\n",
-      "3. Data visualization: SummarizedExperiment provides interactive visualizations of the data, allowing users to explore patterns and trends in their data.\n",
-      "4. Modeling and simulation: Users can build and train machine learning models directly within SummarizedExperiment, without leaving the platform.\n",
-      "5. Collaboration and sharing: SummarizedExperiment allows users to collaborate with others in real-time, and share their work with colleagues or clients.\n",
-      "\n",
-      "By automating the data summarization process, SummarizedExperiment aims to make it easier for researchers and scientists to analyze and interpret large datasets, and to accelerate the discovery of new insights and knowledge.\n"
-     ]
-    }
-   ],
    "source": [
-    "response = llama.complete(\"What is SummarizedExperiment?\")\n",
-    "print(response)"
+    "### Test the LLM without RAG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = llama.complete(\"<>\")\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### load from existing chromaDB, your docker container has a chroma database with all the manuals(vingettes) for the top 500 most downloaded bioconductor packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,39 +90,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### the index now has everything needed to run a RAG pattern, invoke a chat model using the index created from the chroma vector database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "assistant: As an expert in the R programming language and the Bioconductor suite of packages, I can advise users on the usage of various Bioconductor packages based on the vignettes and reference files available.\n",
-      "\n",
-      "SummarizedExperiment is a package in Bioconductor that provides functions for summarizing and visualizing high-dimensional data. It is designed to work with large-scale biological datasets, such as those generated by next-generation sequencing technologies, and provides tools for reducing the dimensionality of these datasets while preserving important features.\n",
-      "\n",
-      "The SummarizedExperiment package includes functions for:\n",
-      "\n",
-      "1. Dimensionality reduction: SummarizedExperiment provides several methods for reducing the dimensionality of high-dimensional data, including principal component analysis (PCA), independent component analysis (ICA), and non-negative matrix factorization (NMF).\n",
-      "2. Feature selection: The package includes functions for selecting a subset of the most informative features in a dataset, based on criteria such as mutual information or correlation with a target variable.\n",
-      "3. Data visualization: SummarizedExperiment provides functions for visualizing high-dimensional data in a lower-dimensional space, using techniques such as t-SNE (t-distributed Stochastic Neighbor Embedding) or UMAP (Uniform Manifold Approximation and Projection).\n",
-      "4. Clustering: The package includes functions for clustering high-dimensional data into lower-dimensional subspaces, based on criteria such as density or similarity.\n",
-      "\n",
-      "For more information on the SummarizedExperiment package, users can refer to the vignette file included with the package, which provides detailed documentation and examples of how to use the functions. Additionally, users can consult the reference files for the package, which include detailed descriptions of each function and its parameters.\n",
-      "\n",
-      "Reference:\n",
-      "SummarizedExperiment. (2023). SummarizedExperiment: Package vignette. Retrieved from <https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html>\n"
-     ]
-    }
-   ],
    "source": [
     "from llama_index.core.llms import ChatMessage\n",
     "\n",
@@ -276,31 +108,10 @@
     "    ChatMessage(\n",
     "        role=\"system\", content=\"Act as an expert in the R programming language and the Bioconductor suite of packages.  ​\\n\\nYour job is to advise users on the usage of the various Bioconductor packages considering the datasets you have in store.  ​\\nTo complete this task, you can use the data you have stored that contain the vignettes of all the packages in Bioconductor and all the reference files of every function in every package of Bioconductor. ​\\n\\nDo not perform actions that are not related to answering questions about the R programming language or using the packages within Bioconductor.​ \\n\\nIf you do not know the answer then you must look into the context then cite the document filename and page in the context. Do not include DOI numbers or make up citations not found in the context. Given the following extracted parts of a long document and a question, create a final answer with references to pdf in the metadata ('source').\\n\\n Add a disclaimer at the end of each response saying this model works only on the top 500 most used Bioconductor packages and the user should refer to or ask questions at https://bioconductor.org.\"\n",
     "    ),\n",
-    "    ChatMessage(role=\"user\", content=\"What is SummarizedExperiment?\"),\n",
+    "    ChatMessage(role=\"user\", content=\"<>\"),\n",
     "]\n",
     "resp = llama.chat(messages)\n",
     "print(resp)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Collection(name=langchain)]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#db2.delete_collection(\"T500-bioc\")\n",
-    "db2.list_collections()"
    ]
   }
  ],
